[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mcbifrost"
dependencies = [
    'zenlog==1.1,',
    'platformdirs==3.11',
    "importlib_metadata; python_version<'3.8'",
    "mccode @ file:///home/g/Code/mccode-antlr"
]
dynamic = ["version"]

[project.scripts]
mcbifrost_run = "mcbifrost.run:entrypoint"
mcbifrost_single = "mcbifrost.single:entrypoint"

[tool.setuptools_scm]
