[build-system]
requires = ["setuptools>=60", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restage"
dependencies = [
    'zenlog==1.1,',
    'platformdirs==3.11',
    "importlib_metadata; python_version<'3.8'",
    "mccode @ file:///home/g/Code/mccode-antlr"
]
dynamic = ["version"]

[project.scripts]
restage = "restage.run:entrypoint"
splitrun = "restage.splitrun:entrypoint"

[tool.setuptools_scm]
